[tool.poetry]
name = "scynet_trainer"
version = "0.0.1"
description = "A Scynet Trainer Python Package"
authors = ["Viktor Velev <viktorvelev8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow-gpu = "2.12.0"
numpy = "^1.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
